fixed highlighting + scrollbar removal

--- a/css/image.css
+++ b/css/image.css
@@ -4,12 +4,14 @@
     width: 500px;
     height: 500px;
     transform: translate(-30%, -15%);
+    user-select: none;
 }
 
 .cat {
     position: absolute;
     bottom: 0;
     left: 50px;
+    user-select: none;
 }
 
 .racquet {
@@ -19,6 +21,7 @@
     transform-origin: bottom left;
     transform: rotate(0deg);
     transition: transform 0.3s ease-in-out;
+    user-select: none;
 }
 
 @keyframes swing {
@@ -33,7 +36,7 @@
     height:100px;
     top:20px;
     left:260px;
-    
+    user-select: none;
 }
 
 @keyframes ball-spin {
